@media query added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Airbnb | Melbourne</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Google Font embed -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700,900" rel="stylesheet">
@@ -32,7 +33,7 @@
     </div>
 
     <div class="grid grid-container container_activity">
-      <div class="grid-left">
+      <div class="grid grid-left grid-border">
         <div class="title">
           <h2>Locals Love</h2>
         </div>
@@ -42,7 +43,7 @@
         </div>
       </div>
 
-      <div class="grid-right">
+      <div class="grid grid-right grid-border">
         <div class="title">
           <h2>Locals Complain About</h2>
         </div>
@@ -60,7 +61,7 @@
       </div>
 
       <div class="grid thumbnail">
-        <div>
+        <div class=" grid features-container">
           <div class="flex justify-thumbnail thumbnail-container image1">
             <h2>Fitzroy</h2>
             <p>Baristas, Beards, Bikes.</p>
@@ -69,7 +70,8 @@
             <p>Hip Terrace Houses Anything goes Vintage Clothing</p>
           </div>
         </div>
-        <div>
+
+        <div class="grid features-container">
           <div class="flex justify-thumbnail thumbnail-container image2">
             <h2>St Kilda</h2>
             <p>Backpackers and packed sand.</p>
@@ -78,7 +80,8 @@
             <p>Cake Shops Backpackers Hippies Beach Culture</p>
           </div>
         </div>
-        <div>
+
+        <div class="grid features-container">
           <div class="flex justify-thumbnail thumbnail-container image3">
             <h2>Central Business District</h2>
             <p>Big business. Little laneways.</p>
